Tilføjet mere til liste af produkter og detajler af produkt

--- a/WebApplication/Content/Site.css
+++ b/WebApplication/Content/Site.css
@@ -9,8 +9,8 @@
     padding-right: 15px;
 }
 
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
+/* Override the default bootstrap behavior where horizontal description lists
+   will truncate terms that are too long to fit in the left column
 */
 .dl-horizontal dt {
     white-space: normal;
@@ -21,4 +21,9 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+.background {
+    background: linear-gradient(right, #c04848, #480048);
+    min-height: 100vh;
 }
