--- a/WebApplication/Views/Shared/_Layout.cshtml
+++ b/WebApplication/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Produkter", "List", "Product")</li>
                     <li>@Html.ActionLink("Kurv", "Index", "Cart")</li>
+                    <li>@Html.ActionLink("Login", "index", "Login")</li>
                 </ul>
             </div>
         </div>
