--- a/WebApplication/Views/Product/Details.cshtml
+++ b/WebApplication/Views/Product/Details.cshtml
@@ -4,17 +4,15 @@
     ViewBag.Title = "Details";
 }
 
-<div class="jumbotron">
-    <h1>@Model.Name</h1>
-    <p>Find ud af mere om dette produkt og se farver og størrelser!</p>
-</div>
-
 <div>
-    <h4>@Model.Name</h4>
+    <div class="jumbotron jumbotron-fluid">
+        <h1 class="display-4">@Model.Name</h1>
+        <p class="lead">Få mere information omkring produktet og vælg farver og størrelser nedenfor!</p>
+    </div>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.StyleNumber)
+            Varenummer:
         </dt>
 
         <dd>
@@ -22,7 +20,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            Produkt:
         </dt>
 
         <dd>
@@ -30,7 +28,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Description)
+            Beskrivelse:
         </dt>
 
         <dd>
@@ -38,15 +36,106 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Price)
+            Pris:
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Price)
+            @Html.DisplayFor(model => model.Price),-
+        </dd>
+
+        <dt>
+            Tilgængelige farver:
+        </dt>
+
+        <dd>
+            <select id="colors" @*onchange="ChangeSizes(this.value)*@>
+                <option value="default">Vælg en farve</option>
+                @foreach (var item in Model.GetAvailableColors()) {
+                    <option value="@item">@item</option>
+                }
+            </select>
+        </dd>
+
+        <dt>
+            Størrelser:
+        </dt>
+
+        <dd>
+            <select id="sizes">
+                <option value="default">Vælg en størrelse</option>
+                <option value="xs">xs</option>
+                <option value="s">s</option>
+                <option value="m">m</option>
+                <option value="l">l</option>
+                <option value="xl">xl</option>
+                <option value="xxl">xxl</option>
+            </select>
         </dd>
     </dl>
 </div>
-<p>
-    @*@Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |*@
-    @Html.ActionLink("Back to List", "List")
-</p>
+
+<div class="container">
+    <div class="row">
+        <div class="col-sm-2">
+            @*@using (Html.BeginForm("List", "Product")) {
+                    <button type="submit" class="btn btn-primary">Tilføj til kurv</button>
+                }*@
+            <button type="submit" class="btn btn-primary" onclick="validateAllOk()">Tilføj til kurv</button>
+        </div>
+        <div class="col-sm-2">
+            @using (Html.BeginForm("List", "Product")) {
+                <button type="submit" class="btn btn-secondary">Tilbage til produkter</button>
+            }
+        </div>
+    </div>
+</div>
+<script>
+    function validateAllOk() {
+        var selectedColor = document.getElementById("colors").value;
+        var selectedSize = document.getElementById("sizes").value;
+        if (selectedColor != "default" && selectedSize != "default") {
+            alert("Farve: " + selectedColor + "\nStr: " + selectedSize);
+        } else if (selectedColor == "default" && selectedSize != "default") {
+            alert("Vælg en farve");
+        } else if (selectedColor != "default" && selectedSize == "default") {
+            alert("Vælg en størrelse");
+        } else {
+            alert("Vælg farve og størrelse");
+        }
+
+        // tjek om den valgte combination eksisterer i systemet
+        @*@{
+            CompanyProductVersion product = Model.GetProductVersion(selectedColor, selectedSize);
+            if (product != null) {
+                // gør noget
+            }
+        }*@
+
+        //alert(selectedColor + " - " + selectedSize);
+    }
+</script>
+
+@*<script>
+        function ChangeSizes(value) {
+            var sizeComboBox = document.getElementById("sizes");
+
+            @foreach (var item in Model.GetSizesAvailableInSpecificColor("blue")) {
+
+                var opt = document.createElement('option');
+
+                opt.appendChild(document.createTextNode('XL'));
+
+                sizeComboBox.appendChild(opt);
+            }
+
+            var opt = document.createElement('option');
+
+            opt.appendChild(document.createTextNode('XL'));
+
+            sizeComboBox.appendChild(opt);
+
+            alert(opt.value);
+
+            alert(sizeComboBox.innerHTML);
+        }
+    </script>*@
