--- a/WebApplication/Views/Cart/Add.cshtml
+++ b/WebApplication/Views/Cart/Add.cshtml
@@ -4,62 +4,60 @@
     ViewBag.Title = "Add";
 }
 
-<h2>Add</h2>
-@foreach (var item in Model) {
-    <h3>@item.Product.Name</h3>
-}
+<h2>Din indkøbskurv</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            Produkt
-        </th>
-        <th>
-            Farve
-        </th>
-        <th>
-            Størrelse
-        </th>
-        <th>
-            Pris
-        </th>
-        <th>
-            Antal
-        </th>
-        <th>
-            Total pris
-        </th>
-        <th></th>
-    </tr>
-
-    @foreach (var item in Model) {
+@if (Model != null) {
+    <table class="table">
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Product.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ColorCode)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SizeCode)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Product.Price)
-            </td>
-            <td>
-                1
-            </td>
-            <td>
-                Tja
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            </td>
+            <th>
+                Produkt
+            </th>
+            <th>
+                Farve
+            </th>
+            <th>
+                Størrelse
+            </th>
+            <th>
+                Pris
+            </th>
+            <th>
+                Antal
+            </th>
+            <th>
+                Total pris
+            </th>
+            <th></th>
         </tr>
-    }
-</table>
+
+        @foreach (var item in Model) {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Product.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ColorCode)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SizeCode)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Product.Price)
+                </td>
+                <td>
+                    1
+                </td>
+                <td>
+                    Tja
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                    @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                    @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                </td>
+            </tr>
+        }
+    </table>
+} else {
+    <h2>Din indkøbskurv er tom</h2>
+}
