--- a/WebApplication/Views/Customer/Create.cshtml
+++ b/WebApplication/Views/Customer/Create.cshtml
@@ -31,18 +31,18 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.CustStreet, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.Street, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.CustStreet, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.CustStreet, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.Street, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Street, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.CustNo, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.HouseNo, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.CustNo, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.CustNo, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.HouseNo, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.HouseNo, "", new { @class = "text-danger" })
                 </div>
             </div>
 
