Indkøbs kurv additions

--- a/WebApplication/Views/Product/Details.cshtml
+++ b/WebApplication/Views/Product/Details.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Details";
 }
 
-@using (Html.BeginForm("Add", "Cart", Model)) {
+@using (Html.BeginForm("Index", "Cart", Model)) {
     <div>
         <div class="jumbotron jumbotron-fluid">
             <h1 class="display-4">@Model.Name</h1>
