--- a/WebApplication/Views/Cart/Index.cshtml
+++ b/WebApplication/Views/Cart/Index.cshtml
@@ -3,11 +3,18 @@
 @{
     ViewBag.Title = "Index";
 }
-
 <h2>Din indkøbskurv</h2>
+
+
 
 <table class="table">
     <tr>
+        <th>
+
+        </th>
+        <th>
+
+        </th>
         <th>
             Produkt
         </th>
@@ -24,36 +31,39 @@
             Antal
         </th>
         <th>
-            Total pris
         </th>
         <th></th>
     </tr>
 
-    @foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Product.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ColorCode)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SizeCode)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Product.Price)
-            </td>
-            <td>
-                1
-            </td>
-            <td>
-                Tja
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            </td>
-        </tr>
+    @foreach (var item in Model)
+    {
+
+            <tr>
+                <td>
+                    <img src="https://i.imgur.com/Hx6uRNh.png" alt="stockimage" height="100" width="100">
+                </td>
+                <td>
+                    @(Model.ToList().IndexOf(item) + 1)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Product.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ColorCode)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SizeCode)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Product.Price)
+                </td>
+                <td>
+                    1
+                </td>
+                <td>
+                    @Html.ActionLink("X", "Delete", new { id = Model.ToList().IndexOf(item) })
+                </td>
+            </tr>
+        
     }
-</table>
+    </table>
