--- a/WebApplication/Views/Cart/Index.cshtml
+++ b/WebApplication/Views/Cart/Index.cshtml
@@ -35,15 +35,19 @@
         <th></th>
     </tr>
 
-    @foreach (var item in Model)
+    @if (Model != null && Model.Count() > 0)
     {
+
+        foreach (var item in Model)
+        {
 
             <tr>
                 <td>
-                    <img src="https://i.imgur.com/Hx6uRNh.png" alt="stockimage" height="100" width="100">
+                    @(Model.ToList().IndexOf(item) + 1)
+
                 </td>
                 <td>
-                    @(Model.ToList().IndexOf(item) + 1)
+                    <img src="https://i.imgur.com/Hx6uRNh.png" alt="stockimage" height="100" width="100">
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Product.Name)
@@ -61,9 +65,20 @@
                     1
                 </td>
                 <td>
-                    @Html.ActionLink("X", "Delete", new { id = Model.ToList().IndexOf(item) })
+                    @*@Html.ActionLink("X", "Delete", new { id = Model.ToList().IndexOf(item) })*@
+
+                    <a href='@Url.Action("Delete", "Cart", new { id = Model.ToList().IndexOf(item) } )'>
+                        <img height="20" width="20" alt="X" src='@Url.Content("https://pngimage.net/wp-content/uploads/2018/06/red-x.png-5.png")' />
+                    </a>
                 </td>
             </tr>
-        
+
+        }
     }
-    </table>
+    else
+    {
+        <h3 style="color:red;">
+            Du har ingen produkter i din indkøbskurv.
+        </h3>
+    }
+</table>
