Tilføjet funktionalitet til at oprette ordre osv

--- a/WebApplication/Views/CheckOut/Index.cshtml
+++ b/WebApplication/Views/CheckOut/Index.cshtml
@@ -4,6 +4,18 @@
     ViewBag.Title = "Index";
 }
 
+@{
+    decimal totalprice = 0;
+    int numberOfItems = 0;
+
+    foreach (var item in Model.SalesLineItems) {
+        totalprice += item.Product.Price * item.amount;
+        numberOfItems += item.amount;
+    }
+}
+
+
+
 <h2>Færdiggør din bestilling</h2>
 
 <div>
@@ -68,32 +80,57 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Product.Name)
             </td>
-        
-       
+
+
             <td>
                 @Html.DisplayFor(modelItem => item.amount)
             </td>
-   
-     
+
+
             <td>
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
-  
+
 
             <td>
                 @Html.DisplayFor(modelItem => item.ProductVersion.SizeCode)
             </td>
-    
-    
+
+
             <td>
                 @Html.DisplayFor(modelItem => item.ProductVersion.ColorCode)
             </td>
         </tr>
     }
+    <tr>
+        <th>
+            Antal varer
+        </th>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>
+            @numberOfItems
+        </td>
+    </tr>
+    <tr>
+        <th>
+            Total pris
+        </th>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>
+            @totalprice
+        </td>
+    </tr>
 </table>
 
+@using (Html.BeginForm("Receipt", "CheckOut")) {
+    <button type="submit" class="btn btn-primary">Gå til betaling</button>
+}
 
 @*<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.OrderId }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>*@
+        @Html.ActionLink("Edit", "Edit", new { id = Model.OrderId }) |
+        @Html.ActionLink("Back to List", "Index")
+    </p>*@
