--- a/WebApplication/Views/Cart/Index.cshtml
+++ b/WebApplication/Views/Cart/Index.cshtml
@@ -34,36 +34,41 @@
         </th>
         <th></th>
     </tr>
-
-    @foreach (var item in Model)
+    @if (Model != null)
     {
 
-            <tr>
-                <td>
-                    <img src="https://i.imgur.com/Hx6uRNh.png" alt="stockimage" height="100" width="100">
-                </td>
-                <td>
-                    @(Model.ToList().IndexOf(item) + 1)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Product.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ColorCode)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.SizeCode)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Product.Price)
-                </td>
-                <td>
-                    1
-                </td>
-                <td>
-                    @Html.ActionLink("X", "Delete", new { id = Model.ToList().IndexOf(item) })
-                </td>
-            </tr>
-        
+
+        foreach (var item in Model)
+        {
+
+                <tr>
+                    <td>
+                        <img src="https://i.imgur.com/Hx6uRNh.png" alt="stockimage" height="100" width="100">
+                    </td>
+                    <td>
+                        @(Model.ToList().IndexOf(item) + 1)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Product.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ColorCode)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.SizeCode)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Product.Price)
+                    </td>
+                    <td>
+                        1
+                    </td>
+                    <td>
+                        @Html.ActionLink("X", "Delete", new { id = Model.ToList().IndexOf(item) })
+
+                    </td>
+                </tr>
+
+        }
     }
     </table>
