--- a/WebApplication/Views/Product/Details.cshtml
+++ b/WebApplication/Views/Product/Details.cshtml
@@ -4,7 +4,9 @@
     ViewBag.Title = "Details";
 }
 
-@using (Html.BeginForm("Index", "Cart", Model)) {
+@using (Html.BeginForm("Index", "Cart", Model))
+{
+
     <div>
         <div class="jumbotron jumbotron-fluid">
             <h1 class="display-4">@Model.Name</h1>
@@ -48,23 +50,28 @@
                 Tilgængelige farver:
             </dt>
             @*@using (Html.BeginForm("Validate", "Product", FormMethod.Post)) {*@
-            <dd>
 
-                <select id="colors" name="colors">
-                    <option value="default">Vælg en farve</option>
-                    @foreach (var item in Model.GetAvailableColors()) {
-                        <option value="@item">@item</option>
-                    }
-                </select>
-            </dd>
+         
+                <dd>
 
-            <dt>
-                Størrelser:
-            </dt>
+                    <select id="colors" name="colors">
+                        <option value="default">Vælg en farve</option>
+                        @foreach (var item in Model.GetAvailableColors())
+                        {
+                            <option value="@item">@item</option>
+                        }
+                    </select>
+                </dd>
 
-            <dd>
+                <dt>
+                    Størrelser:
+                </dt>
+
+
+
+                *<dd>
                 <select id="sizes" name="sizes">
-                    <option value="default">Vælg en størrelse</option>
+                    <option value="default">vælg en størrelse</option>
                     <option value="xs">xs</option>
                     <option value="s">s</option>
                     <option value="m">m</option>
@@ -73,23 +80,52 @@
                     <option value="xxl">xxl</option>
                 </select>
             </dd>
+
+                @*<dd>
+                    @{var col = Request.Form["number"];}
+                    <select id="sizes" name="sizes">
+                        <option value="default">Vælg en størrelse</option>
+                        @foreach (var item in Model.GetSizesAvailableInSpecificColor(col))
+                        {
+
+                            <option value="@item">@item</option>
+                        }
+                    </select>
+                </dd>*@
+
+
         </dl>
     </div>
 
     <div class="container">
         <div class="row">
             <div class="col-sm-2">
-                <button type="submit" class="btn btn-primary">Tilføj til kurv</button>
-                @*<button type="submit" class="btn btn-primary" onclick="location.href='@Url.Action("Validate", "Product")'">Tilføj til kurv</button>*@
-                @*<button type="submit" class="btn btn-primary" onclick="validateAllOk()">Tilføj til kurv</button>*@
+                <button type="submit" class="btn btn-primary" onclick="notInStock()" >Tilføj til kurv  </button>
+          
             </div>
 
             <div class="col-sm-2">
                 <button type="submit" class="btn btn-secondary" onclick="location.href='@Url.Action("List", "Product")'">Tilbage til produkter</button>
             </div>
         </div>
+
+        <h2 id="stockalert">
+           
+        </h2>
     </div>
 }
+
+
+
+<script>
+
+    function notInStock() {
+        document.getElementById("stockalert").innerHTML = "Den valgte størrelse er ikke på lager";
+
+    }
+
+
+</script>
 
 @*<script>
     function validateAllOk() {
