Added quantity til vare

--- a/WebApplication/Views/Cart/Index.cshtml
+++ b/WebApplication/Views/Cart/Index.cshtml
@@ -6,77 +6,117 @@
 <h2>Din indkøbskurv</h2>
 
 
+@using (Html.BeginForm("Index", "CheckOut"))
+{
+    <table class="table">
+        <tr>
+            <th>
 
-<table class="table">
-    <tr>
-        <th>
+            </th>
+            <th>
 
-        </th>
-        <th>
+            </th>
+            <th>
+                Produkt
+            </th>
+            <th>
+                Farve
+            </th>
+            <th>
+                Størrelse
+            </th>
+            <th>
+                Pris per vare
+            </th>
+            <th>
+                Antal
+            </th>
+            <th>
+            </th>
+            <th></th>
+        </tr>
 
-        </th>
-        <th>
-            Produkt
-        </th>
-        <th>
-            Farve
-        </th>
-        <th>
-            Størrelse
-        </th>
-        <th>
-            Pris
-        </th>
-        <th>
-            Antal
-        </th>
-        <th>
-        </th>
-        <th></th>
-    </tr>
+        @if (Model != null && Model.Count() > 0)
+        {
 
-    @if (Model != null && Model.Count() > 0) {
+            foreach (var item in Model)
+            {
 
-        foreach (var item in Model) {
+                <tr>
+                    <td>
+                        <img src="https://i.imgur.com/Hx6uRNh.png" alt="stockimage" height="100" width="100">
+                    </td>
+                    <td>
+                        @(Model.ToList().IndexOf(item) + 1)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Product.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ColorCode)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.SizeCode)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Product.Price)
+                    </td>
+                    <td>
+                        @*<form>
+            <label for="amount">
+                <input type="number" name="amount" onclick="" id="amount"
+                       min="1" max="100" step="1" value="@item.Product.Amount">
+            </label>
+        </form>*@
 
-            <tr>
-                <td>
-                    <img src="https://i.imgur.com/Hx6uRNh.png" alt="stockimage" height="100" width="100">
-                </td>
-                <td>
-                    @(Model.ToList().IndexOf(item) + 1)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Product.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ColorCode)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.SizeCode)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Product.Price)
-                </td>
-                <td>
-                    1
-                </td>
-                <td>
-                    @Html.ActionLink("X", "Delete", new { id = Model.ToList().IndexOf(item) })
-                </td>
-            </tr>
+                        @* @Html.TextBoxFor(modelItem => item.Product.Amount, htmlAttributes: new { @value = "control-label col-md-2" })*@
+
+                        @*<div class="form-group">
+            @Html.LabelFor(modelItem => item.Product.Amount, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(modelItem => item.Product.Amount, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(modelItem => item.Product.Amount, "", new { @class = "text-danger" })
+            </div>
+        </div>*@
+
+                        @*@Html.TextBoxFor(modelItem => item.Amount, new { @Value = "1" })*@
+
+
+                        @Html.DisplayFor(modelItem => item.Amount)
+
+                    </td>
+                    <td>
+                        @Html.ActionLink("X", "Delete", new { id = Model.ToList().IndexOf(item) })
+
+                    </td>
+                </tr>
+            }
         }
-    } else {
-        <h3 style="color:red;">
-            Du har ingen produkter i din indkøbskurv.
-        </h3>
-    }
-</table>
+        else
+        {
+            <h3 style="color:red;">
+                Du har ingen produkter i din indkøbskurv.
+            </h3>
+        }
+    </table>
 
-@using (Html.BeginForm("CheckOut", "Cart")) {
-    <button type="submit" class="btn btn-primary">Gå til betaling</button>
-}
-@using (Html.BeginForm("Index", "CheckOut")) {
+
+
+
     <button type="submit" class="btn btn-primary">Gå til betaling 2</button>
 }
+
+<script>
+    function getAmount() {
+        var x = document.getElementById("amount").value;
+        document.getElementById("demo").innerHTML = x;
+
+
+    }
+
+    function callAmount() {
+
+
+    }
+</script>
 
