Jesper ville have andet tekst :)

--- a/WebApplication/Views/Cart/Index.cshtml
+++ b/WebApplication/Views/Cart/Index.cshtml
@@ -27,7 +27,7 @@
                 Størrelse
             </th>
             <th>
-                Pris per vare
+                Stk. pris
             </th>
             <th>
                 Antal
